--- a/src/easymis/views/Dashboard.fxml
+++ b/src/easymis/views/Dashboard.fxml
@@ -1,16 +1,250 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
-    
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easymis.controllers.DashboardController">
    <children>
-      <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass">
+      <AnchorPane id="AnchorPane" prefHeight="1026.0" prefWidth="1244.0" styleClass="mainFxmlClass">
           <stylesheets>
               <URL value="@styles.css" />
           </stylesheets>
+         <children>
+            <AnchorPane layoutX="71.0" layoutY="86.0" />
+            <AnchorPane layoutX="63.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
+               <children>
+                  <JFXDatePicker defaultColor="#3a84c3" layoutX="14.0" layoutY="78.0" promptText="Event Date" />
+                  <JFXButton layoutX="199.0" layoutY="78.0" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Availability" textFill="WHITE" />
+                  <Text fill="#6a94e8" fontSmoothingType="LCD" layoutX="118.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="toolbar" text="Wedding">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#6a94e8" fontSmoothingType="LCD" layoutX="20.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="toolbar" text="Wedding and Mehandhi">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#6a94e8" fontSmoothingType="LCD" layoutX="47.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="toolbar" text="Wedding Reception">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#6a94e8" fontSmoothingType="LCD" layoutX="99.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="toolbar" text="Isha Hall-AC">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#6a94e8" fontSmoothingType="LCD" layoutX="71.0" layoutY="276.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="toolbar" text="Nica Lounge-AC">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <AnchorPane layoutX="199.0" layoutY="118.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
+                     <children>
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="199.0" layoutY="155.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
+                     <children>
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Available">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="199.0" layoutY="228.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
+                     <children>
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="199.0" layoutY="261.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
+                     <children>
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="199.0" layoutY="194.0" prefHeight="20.0" prefWidth="106.0" style="-fx-background-color: #3A84C3;" styleClass="card">
+                     <children>
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="5.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not Available">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+                  <ChoiceBox layoutX="372.0" layoutY="78.0" prefHeight="25.0" prefWidth="140.0" style="-fx-background-color: #3A84C3;" styleClass="card" />
+                  <JFXTextField layoutX="375.0" layoutY="150.0" promptText="Enter Selected Value" styleClass="card" />
+                  <JFXButton layoutX="372.0" layoutY="200.0" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Booking" textFill="WHITE" />
+                  <AnchorPane layoutX="20.0" layoutY="-21.0" prefHeight="70.0" prefWidth="135.0" style="-fx-background-color: #3A84C3;" styleClass="card">
+                     <children>
+                        <FontAwesomeIconView fill="WHITE" glyphName="anchor" layoutX="32.0" layoutY="44.0" size="24" text="Search">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </FontAwesomeIconView>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="667.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
+               <children>
+                  <AnchorPane layoutX="14.0" layoutY="-21.0" prefHeight="70.0" prefWidth="238.0" style="-fx-background-color: #9400d3;" styleClass="card">
+                     <children>
+                        <FontAwesomeIconView fill="WHITE" glyphName="anchor" layoutX="5.0" layoutY="44.0" size="24" text="Diomond Notification">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </FontAwesomeIconView>
+                     </children>
+                  </AnchorPane>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="358.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total ">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="334.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Year">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <AnchorPane layoutX="453.0" layoutY="14.0" prefHeight="70.0" prefWidth="99.0" styleClass="card">
+                     <children>
+                        <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="-1.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
+                           <font>
+                              <Font name="System Bold" size="36.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </AnchorPane>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="332.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Diamond ">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="339.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Booking">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+               </children></AnchorPane>
+            <AnchorPane layoutX="63.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+               <children>
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #20b2aa;" styleClass="card">
+                     <children>
+                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                     </children>
+                  </AnchorPane>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="62">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Booking">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Year">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="360.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+               <children>
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #008000;" styleClass="card">
+                     <children>
+                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                     </children>
+                  </AnchorPane>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Blocking">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Year">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="664.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+               <children>
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ffa500;" styleClass="card">
+                     <children>
+                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                     </children>
+                  </AnchorPane>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Cancellation">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Year">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="964.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+               <children>
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ff0000;" styleClass="card">
+                     <children>
+                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                     </children>
+                  </AnchorPane>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Avg Booking">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="128.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Monthly">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+         </children>
       </AnchorPane>
    </children>
 </StackPane>
