--- a/src/easymis/views/Dashboard.fxml
+++ b/src/easymis/views/Dashboard.fxml
@@ -19,7 +19,7 @@
           </stylesheets>
          <children>
             <AnchorPane layoutX="71.0" layoutY="86.0" />
-            <AnchorPane layoutX="63.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
+            <AnchorPane layoutX="31.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
                   <JFXDatePicker defaultColor="#3a84c3" layoutX="14.0" layoutY="78.0" promptText="Event Date" />
                   <JFXButton layoutX="199.0" layoutY="78.0" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Availability" textFill="WHITE" />
@@ -98,24 +98,21 @@
                   <JFXButton layoutX="372.0" layoutY="200.0" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Booking" textFill="WHITE" />
                   <AnchorPane layoutX="20.0" layoutY="-21.0" prefHeight="70.0" prefWidth="135.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" glyphName="anchor" layoutX="32.0" layoutY="44.0" size="24" text="Search">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </FontAwesomeIconView>
+                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" glyphName="SEARCH" layoutX="50.0" layoutY="47.0" size="36" />
                      </children>
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="667.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
+            <AnchorPane layoutX="643.0" layoutY="415.0" prefHeight="408.0" prefWidth="563.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
-                  <AnchorPane layoutX="14.0" layoutY="-21.0" prefHeight="70.0" prefWidth="238.0" style="-fx-background-color: #9400d3;" styleClass="card">
+                  <AnchorPane layoutX="14.0" layoutY="-21.0" prefHeight="70.0" prefWidth="266.0" style="-fx-background-color: #9400d3;" styleClass="card">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" glyphName="anchor" layoutX="5.0" layoutY="44.0" size="24" text="Diomond Notification">
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="64.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Diomond Notification">
                            <font>
-                              <Font name="System Bold" size="12.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
-                        </FontAwesomeIconView>
+                        </Text>
+                        <FontAwesomeIconView fill="WHITE" glyphName="BULLHORN" layoutX="21.0" layoutY="47.0" size="36" />
                      </children>
                   </AnchorPane>
                   <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="358.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total ">
@@ -130,11 +127,12 @@
                   </Text>
                   <AnchorPane layoutX="453.0" layoutY="14.0" prefHeight="70.0" prefWidth="99.0" styleClass="card">
                      <children>
-                        <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="-1.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
+                        <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="-1.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
                            <font>
                               <Font name="System Bold" size="36.0" />
                            </font>
                         </Text>
+                        <FontAwesomeIconView glyphName="DIAMOND" layoutX="71.0" layoutY="22.0" size="24" />
                      </children>
                   </AnchorPane>
                   <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="332.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Diamond ">
@@ -148,11 +146,11 @@
                      </font>
                   </Text>
                </children></AnchorPane>
-            <AnchorPane layoutX="63.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+            <AnchorPane layoutX="31.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
                   <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #20b2aa;" styleClass="card">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="CALENDAR" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
                   </AnchorPane>
                   <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="62">
@@ -172,11 +170,11 @@
                   </Text>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="360.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+            <AnchorPane layoutX="328.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
                   <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #008000;" styleClass="card">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" glyphName="LOCK" layoutX="38.0" layoutY="47.0" size="36" />
                      </children>
                   </AnchorPane>
                   <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12">
@@ -196,11 +194,11 @@
                   </Text>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="664.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+            <AnchorPane layoutX="643.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
                   <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ffa500;" styleClass="card">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="BAN" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
                   </AnchorPane>
                   <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="15">
@@ -220,11 +218,11 @@
                   </Text>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="964.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
+            <AnchorPane layoutX="940.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
                   <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ff0000;" styleClass="card">
                      <children>
-                        <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" layoutX="32.0" layoutY="47.0" size="36" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="LIST" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
                   </AnchorPane>
                   <Text fill="DARKSLATEGRAY" fontSmoothingType="LCD" layoutX="151.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="10">
