--- a/src/easymis/views/EventBookingView.fxml
+++ b/src/easymis/views/EventBookingView.fxml
@@ -68,6 +68,16 @@
                                           <Font size="15.0" />
                                        </font>
                                     </JFXTextField>
+                                    <JFXTextField fx:id="mobileNumber1" layoutX="120.0" layoutY="230.0" prefHeight="25.0" prefWidth="240.0" promptText="Mobile Number 1" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="270.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </JFXTextField>
+                                    <JFXTextField fx:id="mobileNumber2" layoutX="511.0" layoutY="230.0" prefHeight="25.0" prefWidth="240.0" promptText="Mobile Number 2" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="270.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </JFXTextField>
                                     <CheckBox fx:id="wedding" contentDisplay="CENTER" graphicTextGap="20.0" layoutX="120.0" layoutY="384.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#onWeddingSelection" text="Wedding" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="380.0">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
@@ -110,36 +120,21 @@
                                     </JFXDatePicker>
                                     <JFXButton layoutX="900.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="block-button" text="Block" />
                                     <JFXButton layoutX="981.0" layoutY="489.0" onAction="#bookEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="book-button" text="Book" />
+                                    <JFXButton layoutX="820.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="block-button" text="Reset" />
                                     <Pane layoutX="878.0" layoutY="106.0" prefHeight="212.0" prefWidth="204.0" style="-fx-border-color: blue; -fx-border-width: 3;">
                                        <children>
-                                          <Label fx:id="totalAmount" layoutX="24.0" layoutY="99.0" text="200000">
+                                          <Label fx:id="totalAmount" layoutX="60.0" layoutY="99.0" text="0.00">
                                              <font>
                                                 <Font size="48.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="24.0" layoutY="55.0" text="Total Amount">
-                                             <font>
-                                                <Font size="24.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblEventCategory" alignment="CENTER" layoutX="42.0" layoutY="26.0" prefHeight="17.0" prefWidth="124.0" text="Diamond">
+                                          <Label fx:id="lblEventCategory" alignment="CENTER" layoutX="42.0" layoutY="26.0" prefHeight="17.0" prefWidth="124.0">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
                                        </children>
                                     </Pane>
-                                    <JFXTextField fx:id="mobileNumber1" layoutX="120.0" layoutY="230.0" prefHeight="25.0" prefWidth="240.0" promptText="Mobile Number 1" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="270.0">
-                                       <font>
-                                          <Font size="15.0" />
-                                       </font>
-                                    </JFXTextField>
-                                    <JFXTextField fx:id="mobileNumber2" layoutX="511.0" layoutY="230.0" prefHeight="25.0" prefWidth="240.0" promptText="Mobile Number 2" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="270.0">
-                                       <font>
-                                          <Font size="15.0" />
-                                       </font>
-                                    </JFXTextField>
-                                    <JFXButton layoutX="820.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="block-button" text="Reset" />
                                  </children>
                               </AnchorPane>
                           </content>
