changes as on 5/25 Dash board Icons

--- a/src/easymis/views/EventBookingView.fxml
+++ b/src/easymis/views/EventBookingView.fxml
@@ -93,7 +93,7 @@
                                           <Font name="System Bold" size="15.0" />
                                        </font>
                                     </CheckBox>
-                                    <CheckBox fx:id="acRequired" contentDisplay="CENTER" graphicTextGap="20.0" layoutX="110.0" layoutY="505.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#onAcRequiredSelection" text="A/C Required" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="500.0">
+                                    <CheckBox fx:id="acRequired" contentDisplay="CENTER" graphicTextGap="20.0" layoutX="500.0" layoutY="509.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#onAcRequiredSelection" text="A/C Required" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="509.0">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
                                        </font>
@@ -118,10 +118,10 @@
                                           <Glow />
                                        </effect>
                                     </JFXDatePicker>
-                                    <JFXButton layoutX="900.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="block-button" text="Block" />
-                                    <JFXButton layoutX="981.0" layoutY="489.0" onAction="#bookEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="book-button" text="Book" />
-                                    <JFXButton layoutX="820.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="block-button" text="Reset" />
-                                    <Pane layoutX="878.0" layoutY="106.0" prefHeight="212.0" prefWidth="204.0" style="-fx-border-color: blue; -fx-border-width: 3;">
+                                    <JFXButton buttonType="RAISED" layoutX="900.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #ffd700;" styleClass="block-button" text="Block" />
+                                    <JFXButton buttonType="RAISED" layoutX="981.0" layoutY="489.0" onAction="#bookEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #008000;" styleClass="book-button" text="Book" />
+                                    <JFXButton buttonType="RAISED" layoutX="820.0" layoutY="489.0" onAction="#blockEvent" prefHeight="40.0" prefWidth="70.0" style="-fx-background-color: #3a84c3;" styleClass="block-button" text="Reset" />
+                                    <Pane layoutX="878.0" layoutY="106.0" prefHeight="212.0" prefWidth="204.0" style="-fx-border-color: GREEN; -fx-border-width: 3;">
                                        <children>
                                           <Label fx:id="totalAmount" layoutX="60.0" layoutY="99.0" text="0.00">
                                              <font>
