--- a/src/easymis/views/Dashboard.fxml
+++ b/src/easymis/views/Dashboard.fxml
@@ -2,10 +2,8 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDatePicker?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
@@ -93,9 +91,6 @@
                         </Text>
                      </children>
                   </AnchorPane>
-                  <ChoiceBox layoutX="372.0" layoutY="78.0" prefHeight="25.0" prefWidth="140.0" style="-fx-background-color: #3A84C3;" styleClass="card" />
-                  <JFXTextField layoutX="375.0" layoutY="150.0" promptText="Enter Selected Value" styleClass="card" />
-                  <JFXButton layoutX="372.0" layoutY="200.0" style="-fx-background-color: #3A84C3;" styleClass="card" text="Search Booking" textFill="WHITE" />
                   <AnchorPane layoutX="20.0" layoutY="-21.0" prefHeight="70.0" prefWidth="135.0" style="-fx-background-color: #3A84C3;" styleClass="card">
                      <children>
                         <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" glyphName="SEARCH" layoutX="50.0" layoutY="47.0" size="36" />
@@ -107,7 +102,7 @@
                <children>
                   <AnchorPane layoutX="14.0" layoutY="-21.0" prefHeight="70.0" prefWidth="266.0" style="-fx-background-color: #9400d3;" styleClass="card">
                      <children>
-                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="64.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Diomond Notification">
+                        <Text fill="WHITE" fontSmoothingType="LCD" layoutX="64.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Diamond Notification">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
@@ -148,7 +143,7 @@
                </children></AnchorPane>
             <AnchorPane layoutX="31.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
-                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #20b2aa;" styleClass="card">
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #008000;" styleClass="card">
                      <children>
                         <FontAwesomeIconView fill="WHITE" glyphName="CALENDAR" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
@@ -172,7 +167,7 @@
             </AnchorPane>
             <AnchorPane layoutX="328.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
-                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #008000;" styleClass="card">
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ffd700;" styleClass="card">
                      <children>
                         <FontAwesomeIconView fill="WHITE" fontSmoothingType="LCD" glyphName="LOCK" layoutX="38.0" layoutY="47.0" size="36" />
                      </children>
@@ -196,7 +191,7 @@
             </AnchorPane>
             <AnchorPane layoutX="643.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
-                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ffa500;" styleClass="card">
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ff0000;" styleClass="card">
                      <children>
                         <FontAwesomeIconView fill="WHITE" glyphName="BAN" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
@@ -220,7 +215,7 @@
             </AnchorPane>
             <AnchorPane layoutX="940.0" layoutY="213.0" prefHeight="159.0" prefWidth="266.0" style="-fx-background-color: #ffffff;" styleClass="card">
                <children>
-                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #ff0000;" styleClass="card">
+                  <AnchorPane layoutX="14.0" layoutY="-19.0" prefHeight="70.0" prefWidth="99.0" style="-fx-background-color: #adff2f;" styleClass="card">
                      <children>
                         <FontAwesomeIconView fill="WHITE" glyphName="LIST" layoutX="35.0" layoutY="47.0" size="36" wrappingWidth="30.0" />
                      </children>
